collabmail-pro/backend/nodejs-express/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-express-backend-service
spec:
  selector:
    app: nodejs-express-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
