collabmail-pro/backend/nodejs-express/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-express-ingress
spec:
  rules:
    - host: nodejs-express.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-express-backend-service
                port:
                  number: 8080
